--- a/.github/workflows/publish-curseforge.yml
+++ b/.github/workflows/publish-curseforge.yml
@@ -12,23 +12,29 @@ on:
       minecraft_version:
         required: true
         type: string
+      mod_version:
+        required: true
+        type: string
+      archives_base_name:
+        required: true
+        type: string
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Download artifacts
+
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-libs
           path: build/libs/
 
-      - name: Find JAR
+      - name: Find mod JAR
         id: find_jar
         run: |
-          JAR_PATH=$(ls build/libs/goldendandelionindicator-*.jar | grep -v "sources" | grep -v "dev" | head -n 1)
+          JAR_PATH=$(ls build/libs/${{ inputs.archives_base_name }}-*.jar | grep -v "sources" | grep -v "dev" | head -n 1)
           echo "jar_path=$JAR_PATH" >> $GITHUB_OUTPUT
 
       - name: Upload to CurseForge
@@ -37,7 +43,7 @@ jobs:
           file_path: "${{ steps.find_jar.outputs.jar_path }}"
           game_endpoint: "minecraft"
           relations: "fabric-api:requiredDependency"
-          game_versions: "Java 25,Fabric,${{ inputs.minecraft_version }}"
+          game_versions: "Fabric,${{ inputs.minecraft_version }}"
           project_id: "${{ vars.CURSEFORGE_PROJECT_ID }}"
           token: "${{ secrets.CURSEFORGE_TOKEN }}"
           changelog: "${{ inputs.changelog }}"
