--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,7 +15,6 @@ jobs:
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
-      paths_released: ${{ steps.release.outputs.paths_released }}
       body: ${{ steps.release.outputs.body }}
     steps:
       - uses: googleapis/release-please-action@v4
@@ -26,60 +25,84 @@ jobs:
           manifest-file: .release-please-manifest.json
           target-branch: main
 
-  build-and-publish:
+  extract-properties:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
     outputs:
-      minecraft_version: ${{ steps.extract_version.outputs.mc_version }}
+      archives_base_name: ${{ steps.props.outputs.archives_base_name }}
+      minecraft_version: ${{ steps.props.outputs.minecraft_version }}
+      mod_version: ${{ steps.props.outputs.mod_version }}
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Extract Minecraft Version
-        id: extract_version
-        run: |
-          MC_VERSION=$(grep "^minecraft_version=" gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
-          echo "mc_version=$MC_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Set up JDK 25
+      - name: Extract Gradle Properties
+        id: props
+        run: |
+          ARCHIVES_BASE_NAME=$(grep "^archives_base_name=" gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
+          MINECRAFT_VERSION=$(grep "^minecraft_version=" gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
+          MOD_VERSION=$(grep "^mod_version=" gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
+          echo "archives_base_name=$ARCHIVES_BASE_NAME" >> $GITHUB_OUTPUT
+          echo "minecraft_version=$MINECRAFT_VERSION" >> $GITHUB_OUTPUT
+          echo "mod_version=$MOD_VERSION" >> $GITHUB_OUTPUT
+
+  build:
+    needs: [release-please, extract-properties]
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '25'
+          java-version: '21'
           distribution: 'temurin'
-      
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Upload to Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-please.outputs.tag_name }} build/libs/*.jar --clobber
-
-      - name: Upload artifacts
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-libs
           path: build/libs/
 
+  upload-github-release:
+    needs: [release-please, extract-properties, build]
+    if: ${{ needs.release-please.outputs.release_created }}
+    uses: ./.github/workflows/upload-github-release.yml
+    with:
+      version: ${{ needs.release-please.outputs.tag_name }}
+      changelog: ${{ needs.release-please.outputs.body }}
+      minecraft_version: ${{ needs.extract-properties.outputs.minecraft_version }}
+      mod_version: ${{ needs.extract-properties.outputs.mod_version }}
+      archives_base_name: ${{ needs.extract-properties.outputs.archives_base_name }}
+    secrets: inherit
+
   publish-curseforge:
-    needs: [release-please, build-and-publish]
+    needs: [release-please, extract-properties, build]
     if: ${{ needs.release-please.outputs.release_created }}
     uses: ./.github/workflows/publish-curseforge.yml
     with:
       version: ${{ needs.release-please.outputs.tag_name }}
       changelog: ${{ needs.release-please.outputs.body }}
-      minecraft_version: ${{ needs.build-and-publish.outputs.minecraft_version }}
+      minecraft_version: ${{ needs.extract-properties.outputs.minecraft_version }}
+      mod_version: ${{ needs.extract-properties.outputs.mod_version }}
+      archives_base_name: ${{ needs.extract-properties.outputs.archives_base_name }}
     secrets: inherit
 
   publish-modrinth:
-    needs: [release-please, build-and-publish]
+    needs: [release-please, extract-properties, build]
     if: ${{ needs.release-please.outputs.release_created }}
     uses: ./.github/workflows/publish-modrinth.yml
     with:
       version: ${{ needs.release-please.outputs.tag_name }}
       changelog: ${{ needs.release-please.outputs.body }}
-      minecraft_version: ${{ needs.build-and-publish.outputs.minecraft_version }}
+      minecraft_version: ${{ needs.extract-properties.outputs.minecraft_version }}
+      mod_version: ${{ needs.extract-properties.outputs.mod_version }}
+      archives_base_name: ${{ needs.extract-properties.outputs.archives_base_name }}
     secrets: inherit
