--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,9 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.18.4
 # Mod Properties
-# x-release-please-version
+# x-release-please-start-version
 mod_version=1.0.0
+# x-release-please-end
 maven_group=com.karasu256
 archives_base_name=mojanglogoanimation
 # Dependencies
