--- a/.github/workflows/publish-curseforge.yml
+++ b/.github/workflows/publish-curseforge.yml
@@ -31,20 +31,19 @@ jobs:
           name: build-libs
           path: build/libs/
 
-      - name: Find mod JAR
-        id: find_jar
-        run: |
-          JAR_PATH=$(ls build/libs/${{ inputs.archives_base_name }}-*.jar | grep -v "sources" | grep -v "dev" | head -n 1)
-          echo "jar_path=$JAR_PATH" >> $GITHUB_OUTPUT
-
-      - name: Upload to CurseForge
-        uses: itsmeow/curseforge-upload@v3
+      - name: Publish to CurseForge
+        uses: Kir-Antipov/mc-publish@v3.3
         with:
-          file_path: "${{ steps.find_jar.outputs.jar_path }}"
-          game_endpoint: "minecraft"
-          relations: "fabric-api:requiredDependency"
-          game_versions: "Java 21,Fabric,${{ inputs.minecraft_version }}"
-          project_id: "${{ vars.CURSEFORGE_PROJECT_ID }}"
-          token: "${{ secrets.CURSEFORGE_TOKEN }}"
-          changelog: "${{ inputs.changelog }}"
-          changelog_type: "markdown"
+          curseforge-id: ${{ vars.CURSEFORGE_PROJECT_ID }}
+          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          files: |
+            build/libs/${{ inputs.archives_base_name }}-${{ inputs.mod_version }}.jar
+          name: "${{ inputs.archives_base_name }}-${{ inputs.mod_version }}"
+          version: ${{ inputs.version }}
+          version-type: release
+          changelog: ${{ inputs.changelog }}
+          loaders: fabric
+          game-versions: ${{ inputs.minecraft_version }}
+          dependencies: |
+            fabric-api@*(required)
+          java: 21
