--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=1.21.2
+yarn_mappings=1.21.2+build.1
 loader_version=0.18.4
 # Mod Properties
 # x-release-please-start-version
@@ -13,6 +13,6 @@ maven_group=com.karasu256
 archives_base_name=mojanglogoanimation
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.116.8+1.21.1
-clothconfig_version=15.0.140
-modmenu_version=11.0.1
+fabric_api_version=0.106.1+1.21.2
+clothconfig_version=16.0.143
+modmenu_version=12.0.0-beta.1
