--- a/.github/workflows/publish-curseforge.yml
+++ b/.github/workflows/publish-curseforge.yml
@@ -41,8 +41,9 @@ jobs:
           curseforge-id: ${{ vars.CURSEFORGE_PROJECT_ID }}
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
           files: |
-            build/libs/${{ inputs.archives_base_name }}-${{ inputs.mod_version }}.jar
-          name: "${{ inputs.archives_base_name }}-${{ inputs.mod_version }}"
+          files: |
+            build/libs/${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}.jar
+          name: "${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}"
           version: ${{ inputs.version }}
           version-type: release
           changelog: ${{ inputs.changelog }}
