--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,15 @@ jobs:
         uses: actions/checkout@v4
       - name: validate gradle wrapper
         uses: gradle/actions/wrapper-validation@v4
+      - name: Extract Java Version
+        id: config
+        run: |
+          JAVA_VERSION=$(jq -r '.java // 21' .github/build-config.json)
+          echo "java_version=$JAVA_VERSION" >> $GITHUB_OUTPUT
       - name: setup jdk
         uses: actions/setup-java@v4
         with:
-          java-version: '25'
+          java-version: ${{ steps.config.outputs.java_version }}
           distribution: 'microsoft'
       - name: make gradle wrapper executable
         run: chmod +x ./gradlew
