--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.6
-yarn_mappings=1.21.6+build.1
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.8
 loader_version=0.18.4
 # Mod Properties
 # x-release-please-start-version
@@ -13,6 +13,6 @@ maven_group=com.karasu256
 archives_base_name=mojanglogoanimation
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_api_version=0.128.2+1.21.6
+fabric_api_version=0.129.0+1.21.7
 clothconfig_version=19.0.147
-modmenu_version=15.0.0-beta.3
+modmenu_version=15.0.1
