--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.3
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.4
 loader_version=0.18.4
 # Mod Properties
 # x-release-please-start-version
@@ -13,6 +13,6 @@ maven_group=com.karasu256
 archives_base_name=mojanglogoanimation
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_api_version=0.138.4+1.21.10
-clothconfig_version=20.0.149
-modmenu_version=16.0.0
+fabric_api_version=0.141.3+1.21.11
+clothconfig_version=21.11.153
+modmenu_version=17.0.0-beta.2
