--- a/.github/workflows/release/publish-curseforge.yml
+++ b/.github/workflows/release/publish-curseforge.yml
@@ -1,4 +1,4 @@
-name: Publish to Modrinth
+name: Publish to CurseForge
 
 on:
   workflow_call:
@@ -26,6 +26,12 @@ on:
         required: true
         type: string
         description: "Java version"
+      curseforge_project_id:
+        required: true
+        type: string
+      curseforge_token:
+        required: true
+        type: string
 
 jobs:
   publish:
@@ -39,11 +45,11 @@ jobs:
           name: build-libs
           path: build/libs/
 
-      - name: Publish to Modrinth
+      - name: Publish to CurseForge
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          modrinth-id: ${{ vars.MODRINTH_PROJECT_ID }}
-          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          curseforge-id: ${{ inputs.curseforge_project_id }}
+          curseforge-token: ${{ inputs.curseforge_token }}
           files: |
             build/libs/${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}.jar
           name: "${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}"
