--- a/.github/workflows/release/publish-modrinth.yml
+++ b/.github/workflows/release/publish-modrinth.yml
@@ -1,4 +1,4 @@
-name: Publish to CurseForge
+name: Publish to Modrinth
 
 on:
   workflow_call:
@@ -26,6 +26,12 @@ on:
         required: true
         type: string
         description: "Java version"
+      modrinth_project_id:
+        required: true
+        type: string
+      modrinth_token:
+        required: true
+        type: string
 
 jobs:
   publish:
@@ -39,11 +45,11 @@ jobs:
           name: build-libs
           path: build/libs/
 
-      - name: Publish to CurseForge
+      - name: Publish to Modrinth
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          curseforge-id: ${{ vars.CURSEFORGE_PROJECT_ID }}
-          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          modrinth-id: ${{ inputs.modrinth_project_id }}
+          modrinth-token: ${{ inputs.modrinth_token }}
           files: |
             build/libs/${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}.jar
           name: "${{ inputs.archives_base_name }}-${{ inputs.mod_version }}-${{ inputs.minecraft_version }}"
